--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,16 +32,30 @@ jobs:
           ${{ runner.os }}-nuget-
 
     - name: Restore dependencies
-      run: dotnet restore StringConcatStrategyApp/StringConcatStrategyApp.csproj
+      run: dotnet restore StringConcatStrategiesLab.sln
 
-    - name: Build project
-      run: dotnet build StringConcatStrategyApp/StringConcatStrategyApp.csproj --no-restore --configuration Release
+    - name: Build solution
+      run: dotnet build StringConcatStrategiesLab.sln --no-restore --configuration Release
 
-    - name: Run tests (if any)
-      run: dotnet test StringConcatStrategyApp/StringConcatStrategyApp.csproj --no-build --configuration Release --verbosity normal
-      continue-on-error: true
+    - name: Run tests
+      run: |
+        dotnet test StringConcatStrategiesLab.sln \
+          --no-build \
+          --configuration Release \
+          --logger "trx;LogFileName=test_results.trx" \
+          --results-directory TestResults \
+          --verbosity normal
 
-    - name: Publish artifacts
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results-${{ github.sha }}
+        path: TestResults
+        retention-days: 14
+
+    - name: Publish artifacts (only if tests passed)
+      if: success()
       run: dotnet publish StringConcatStrategyApp/StringConcatStrategyApp.csproj --no-build --configuration Release --output ./publish
 
     - name: Upload build artifacts
@@ -65,10 +79,10 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore StringConcatStrategyApp/StringConcatStrategyApp.csproj
+      run: dotnet restore StringConcatStrategiesLab.sln
 
-    - name: Build with warnings as errors
-      run: dotnet build StringConcatStrategyApp/StringConcatStrategyApp.csproj --no-restore --configuration Release --verbosity normal
+    - name: Build solution (code quality)
+      run: dotnet build StringConcatStrategiesLab.sln --no-restore --configuration Release --verbosity normal
 
     - name: Run static analysis
       run: |
@@ -89,7 +103,7 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore StringConcatStrategyApp/StringConcatStrategyApp.csproj
+      run: dotnet restore StringConcatStrategiesLab.sln
 
     - name: Security vulnerability scan
       run: |
